--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -64,7 +64,7 @@
                     General Storage (by default)<br>
                 {% endif %}
                 <h2 style="margin: 10px 10px; display: flex; align-items: center; flex-wrap: nowrap;">
-                {{ current.name }}:
+                {{ current.name }}:&nbsp;
                 {% if current.q_limit %}
                     <div id="storage-progress-container" class="progress-container" style="display: inline-flex; align-items: center; margin-left: 10px;">
                         <progress id="storage-progress-bar" class="progress-bar" value="0" max="100"></progress>
