--- a/app/templates/configure/attrib.html
+++ b/app/templates/configure/attrib.html
@@ -19,6 +19,8 @@
         <input type="text" id="attrib-name" name="attrib_name" value="{{ current.name }}" required><br>
         <label for="attrib-description" >Description:</label>
         <textarea id="attrib-description" name="attrib_description" rows="10" cols="50">{{ current.description }}</textarea><br>
+        <input type="checkbox" id="mult" name="multiplicative" {% if current.mult %}checked{% endif %}>
+        <label for="mult">Multiplicative</label><br>
 
         <div class="footer-buttons">
             <button type="submit" id="btn-save" name="save_changes">Save and Close</button>
