--- a/app/templates/play/attrib.html
+++ b/app/templates/play/attrib.html
@@ -28,12 +28,12 @@
             });
         });
     </script>
-    {% if subject.listname == 'characters' %}
+    {% if subject.typename == 'char' %}
         {% set link = url_for('play_char', char_id=subject.id) %}
-    {% elif subject.listname == 'items' %}
+    {% elif subject.typename == 'item' %}
         {% set link = url_for('play_location', item_id=subject.id) %}
     {% else %}
-        Unexpected list name {{ subject.listname }}
+        Unexpected type {{ subject.typename }}
     {% endif %}
     {% set letter = link_letters.next(link) %}
     <script>
